# SlicerForCASTutorial

./: CMakeLists.txt  README.md
Instructions/: CustomModule.md  SlicerIGTIntroduction.md  ToolTracking.md
ProximityWarning/: CMakeLists.txt  ProximityWarning.py
ProximityWarning/Resources/UI/: ProximityWarning.ui
TrackingServer/: tracking_server.py
